--- a/style.css
+++ b/style.css
@@ -444,7 +444,7 @@
 
 .vd-ads {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   gap: 10px;
   margin: 10px auto !important;
