--- a/style.css
+++ b/style.css
@@ -499,9 +499,39 @@
 }
 
 footer {
+  width: 100%;
   background-color: #eee;
-  max-width: 100%;
-  height: 600px;
+  height: 50vh;
+  position: relative;
+}
+
+.footer-section {
+  padding-top: 3rem !important;
+  padding-bottom: 3rem !important;
+}
+
+.footer-section div ul li a {
+  text-decoration: none;
+  color: inherit;
+  opacity: 0.7;
+}
+
+.footer-section div h5 {
+  margin-bottom: 10px !important;
+}
+
+.footer-section div ul li a:hover {
+  text-decoration: underline;
+}
+
+.end-foot {
+  width: 100%;
+  padding: 30px 0px !important;
+  text-align: center;
+  background-color: #ccc;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 @media (max-width: 1024px) {
