--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
   position: relative;
   background-color: #fafafa;
   max-width: 100vw;
+  min-height: 100vh;
 }
 
 .nav-bar {
@@ -444,7 +445,7 @@
 
 .vd-ads {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   gap: 10px;
   margin: 10px auto !important;
@@ -463,7 +464,7 @@
 
 .vd-ads .vd-ads-body {
   position: relative;
-  margin: 20px 30px !important;
+  margin-right: auto !important;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -481,6 +482,11 @@
 
 .vd-ads .vd-ads-body .ads-btn {
   margin: 5px !important;
+}
+
+#feedBack {
+  padding: 10px !important;
+  outline: none;
 }
 
 .company {
@@ -501,13 +507,12 @@
 footer {
   width: 100%;
   background-color: #eee;
-  height: 50vh;
   position: relative;
 }
 
 .footer-section {
-  padding-top: 3rem !important;
-  padding-bottom: 3rem !important;
+  padding: 3rem 1.8rem !important;
+  justify-content: center;
 }
 
 .footer-section div ul li a {
@@ -529,9 +534,6 @@ footer {
   padding: 30px 0px !important;
   text-align: center;
   background-color: #ccc;
-  position: absolute;
-  bottom: 0;
-  left: 0;
 }
 
 @media (max-width: 1024px) {
@@ -541,6 +543,9 @@ footer {
   .vd-ads .vd-ads-body h1,
   .vd-ads .vd-ads-body span {
     color: #212529;
+  }
+  .vd-ads .vd-ads-body {
+    margin: 30px !important;
   }
   .vd-ads {
     background-color: unset;
