--- a/product.css
+++ b/product.css
@@ -6,4 +6,116 @@
   box-sizing: border-box;
   list-style: none;
   font-family: "Poppins", sans-serif;
+  text-decoration: none;
+}
+
+ul,
+ol,
+li {
+  margin: 0;
+  padding: 0;
+}
+
+.container-fluid {
+  margin: 0;
+  padding: 0;
+  /* height: 1000px; */
+}
+
+.nav-section {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+}
+
+.nav-bar {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #8096d7d1;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.4);
+}
+
+.nav-bar .nav-icon {
+  margin-left: 10px !important;
+}
+
+.nav-bar .nav-icon img {
+  width: 70px;
+  height: 70px;
+}
+
+.nav-bar ul {
+  margin-right: 10px !important;
+  color: #fafafa;
+}
+
+.nav-bar ul .nav-list {
+  display: inline;
+  margin-right: 10px !important;
+}
+
+.nav-bar ul .nav-list a {
+  text-decoration: none;
+  margin-right: 5px !important;
+  color: inherit;
+  font-size: 1.2rem;
+}
+.nav-bar ul .nav-list a:hover {
+  text-decoration: underline;
+  opacity: 0.8;
+  color: #222;
+}
+
+.fa-bars {
+  display: none;
+  color: #fafafa;
+}
+
+.add-card i {
+  position: relative;
+}
+
+.card-count {
+  position: absolute;
+  margin-left: 10px !important;
+  width: 12px;
+  height: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 10px;
+  left: 0;
+  top: 0;
+}
+
+@media (max-width: 1024px) {
+  .nav-bar {
+    display: block;
+    position: relative;
+  }
+  .fa-bars {
+    display: inline;
+    position: absolute;
+    right: 20px;
+    top: 25px;
+    font-size: 20px;
+    vertical-align: middle;
+    cursor: pointer;
+  }
+  .nav-bar ul {
+    border-top: 1px solid darkslategray;
+    width: 100%;
+  }
+  .nav-bar ul {
+    display: none;
+  }
+  .nav-bar ul .nav-list a {
+    display: block;
+    text-align: center;
+    margin: 10px auto !important;
+  }
 }
