--- a/product.css
+++ b/product.css
@@ -28,9 +28,12 @@ li {
   width: 100%;
   z-index: 100;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.4);
+  transition: all 0.4s ease-in-out;
+  /* top: -70px; */
 }
 
 .nav-bar {
+  position: relative;
   width: 100%;
   display: flex;
   justify-content: space-between;
