--- a/yourCard.css
+++ b/yourCard.css
@@ -15,3 +15,19 @@ li {
   margin: 0;
   padding: 0;
 }
+
+.my-card {
+  max-width: 100%;
+  height: 100%;
+}
+
+.card-img-top {
+  object-fit: contain;
+  object-position: center;
+  aspect-ratio: 1 / 1;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
